# tabuddy-llm-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  GPU_TRAINING.md  SKILLS_API_DOCS.md  add_role_aliases.py  aggregator.py  backfill_embeddings.py  block_tagger.py  candidate_extractor.py  canonical_skill_api.py  check_alias_schema.py  check_kra_overlap.py  check_v3.py  cost_tracker.py  db.py  debug_kra.py  docling_api.py  docling_client.py  domain_classifier.py  domain_role_classifier_prompt.md  download_models_from_azure.py  excel_role_resolver.py  excel_taxonomy_loader.py  generate_skills_router.py  geo_cities.py  global_parameter_extractor.py  gpu_check.py  hybrid_block_builder.py  jd_classifier.py  jd_parser.py  jd_pipeline_run_repository.py  jd_similarity_matcher.py  job_parser.py  job_parser.txt  list_aliases.py  llm2_disambiguation_prompt.md  llm_client.py  low_confidence_log.jsonl  (+38 more)
.github/workflows/: deploy-skill-library.yml
db/: schema.sql  schema_linkedin_roles_count.sql  schema_linkedin_roles_query_match_count.sql  schema_linkedin_roles_search_indexes.sql  schema_linkedin_roles_staging.sql  schema_linkedin_roles_synonym.sql  schema_linkedin_source.sql  schema_v2_additions.sql  v3_additions_stage4_stage5.sql
prompt_context_store/activity/: context.json
prompt_context_store/layer/: context_by_pillar.json
prompt_context_store/pillar/: context.json
prompt_context_store/platform_tool/: context_by_layer.json  known_aliases.json  primacy_signals.json
scripts/: _bulk_enrich_targets.py  _cleanup_target_roles.py  _cleanup_v3_failed_runs.py  _estimate_jd_cost.py  _force_approve_charter.py  _reset_v3_role.py  backfill_linkedin_role_aliases.py  bootstrap_prod_skill_library.py  build_excel_taxonomy.py  cleanup_dev_runs.py  count_linkedin_role_occurrences.py  import_linkedin_position_titles.py  ingest_jd_samples_prod.py  migrate_data_to_prod.py  migrate_dim_slugs.py  verify_dim_dedup.py
skill_library_v2/: __init__.py  cli.py  config.py  state.py
skill_library_v2/agents/: __init__.py  base.py  categorizer.py  critic.py  dim_worker.py  planner.py  skill_generator.py  validator.py
skill_library_v2/db/: __init__.py  connection.py
skill_library_v2/graph/: __init__.py  builder.py
skill_library_v2/prompts/: __init__.py  categorizer.py  critic.py  planner.py  skill_generator.py
skill_library_v2/schemas/: __init__.py  category.py  provenance.py  role.py  skill.py
skill_library_v2/tools/: __init__.py  brave_search.py  categorizer_tools.py  content_extractor.py  exceptions.py  firecrawl_scrape.py  firecrawl_search.py  shared_tools.py  skill_generator_tools.py  web_search.py
skill_library_v3/: __init__.py  canonical_loader.py  catalog_transform.py  charter_status.py  confidence_routing.py  config.py  coverage_matrices.py  dim_apply.py  dim_augment.py  dim_embedder.py  dim_orphan_validate.py  dim_overlap_pairs.py  dim_post_validate.py  dim_similarity.py  enrichment_status.py  enrichment_validators.py  placement_validators.py  recon_status.py  relationship_validators.py  runner.py  skill_aggregation.py  skill_similarity.py
skill_library_v3/agents/: charter.py  containment.py  dim_critic.py  dimension_gen.py  dimension_validators.py  enrichment.py  placer.py  reconciler.py  role_anchor.py  role_card_validators.py  type_assigner.py  validators.py
skill_library_v3/db/: connection.py  repository.py  v3_additions.sql  v3_additions_kras.sql
skill_library_v3/prompts/: charter.py  containment.py  dim_critic.py  dimension_gen.py  enrichment.py  placer.py  reconciler.py  role_card.py  type_assigner.py
skill_library_v3/schemas/: catalog.py  charter.py  dim_critic.py  dimension.py  (+6 more)
templates/: canonical_skill.html  generate_skills.html  index.html  linkedin_roles.html  pipeline.html  resume_ranking.html  skill_library.html
(+17 files in other folders)
