[project]
name = "tabuddy-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.27",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.14.3",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "spacy>=3.7.0",
    "jinja2>=3.1.6",
    "torch",
    "torchvision",
    "docling>=2.80.0",
    # Lets Docling/RapidOCR use ONNX instead of torch for OCR when available (lower RAM peak).
    "onnxruntime>=1.20.0",
    # ── SetFit 3-tier classification stack ────────────────────────────────────
    "setfit>=1.1.3",
    "sentence-transformers>=3.0.0",
    "datasets>=2.16.1",
    "scikit-learn>=1.4.0",
    "azure-storage-blob>=12.28.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
name = "pytorch-cuda"
explicit = true

# Keep CPU index as fallback for packages not on CUDA index
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv.sources]
# Force torch and torchvision to use CUDA build for GPU support
torch = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]
